src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__constant_assignment_validation.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: diagnostics
---
error[E036]: Cannot assign to CONSTANT 'v_global'
  ┌─ <internal>:8:5
  │
8 │     v_global := TRUE; // INVALID
  │     ^^^^^^^^ Cannot assign to CONSTANT 'v_global'
